--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -123,3 +124,5 @@ yarn-debug.log*
 /storage/*
 !/storage/.keep
 
+# Ignore Spring files
+/spring/*.pid
